--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ white-space: nowrap;
 overflow: hidden;
 text-overflow: ellipsis;
 text-decoration: none;">
-&nbsp;我的网站首页...&nbsp;<br>
+&nbsp;这是一个新域名，你也来试试吧（&nbsp;<br>
 </a>
 </body>
 </html>
