--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>这是一个新域名，你也来试试吧（</title>
+<title>我的网站首页…</title>
 </head>
 <body>
 <a href="https://docs.fuyeor.com/answer/8462.html" style="font-size:80px;color:#0781de;
@@ -21,7 +21,7 @@ white-space: nowrap;
 overflow: hidden;
 text-overflow: ellipsis;
 text-decoration: none;">
-&nbsp;这是一个新域名，你也来试试吧（&nbsp;<br>
+&nbsp;我的网站首页…&nbsp;<br>
 </a>
 </body>
 </html>
