--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>我的网站首页…</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>这是一个免费的新域名，速来尝试！</title>
 </head>
 <body>
-cursor: pointer;
-font-size: 140px;
-color: #0781de;
-cursor: pointer;
-color: rgb(118, 121, 224);
-position: absolute;
-z-index: 9999;
-border-radius: 5px;
-background: rgb(255, 255, 255);
-border: 0.1px solid rgb(238, 238, 238);
-box-shadow: rgb(0 0 0 / 7%) 0px 0px 0px 1px, rgb(0 0 0 / 12%) 0px 2px 3px 0px;
-white-space: nowrap;
-overflow: hidden;
-text-overflow: ellipsis;
-text-decoration: none;">
-&nbsp;我的网站首页…&nbsp;<br>
-</a>
+    <h3>在搞出新域名前不如学习一下Excel吧</h3>
+    <a href="https://github.com/">Github官方网址捏</a>
 </body>
 </html>
