--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <h3>在搞出新域名前不如学习一下Excel吧</h3>
-  <p><a href="https://github.com/">Github官方网址捏</a></p>
-  <p><a href="https://ayouth.top/ayouth/animation.html">作为白嫖怪必须知道的一个看番汇总帖</a></p>
-  <p><a href="https://chat.openai.com/">ChatGPT所在地</a></p>
-  <p><a href="https://www.copymanga.site/">非常著名的拷贝</a></p>
-  <p><a href="https://snapdrop.net/">跨站点隔空投送</a></p>
-  <p><a href="https://nexitally.com/Main.aspx">咱们机场</a></p>
+  <a href="https://github.com/">Github官方网址捏</a><br>
+  <a href="https://ayouth.top/ayouth/animation.html">作为白嫖怪必须知道的一个看番汇总帖</a><br>
+  <a href="https://chat.openai.com/">ChatGPT所在地</a><br>
+  <a href="https://www.copymanga.site/">非常著名的拷贝</a><br>
+  <a href="https://snapdrop.net/">跨站点隔空投送</a><br>
+  <a href="https://nexitally.com/Main.aspx">咱们机场</a><br>
 </body>
 </html>
