--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>这是一个免费的新域名，速来尝试！</title>
+    <meta charset="utf-8"
+    <title>yuuuiv's personal website</title>
 </head>
 <body>
-  <h3>在搞出新域名前不如学习一下Excel吧</h3>
-  <a href="https://github.com/">Github官方网址捏</a><br>
-  <a href="https://ayouth.top/ayouth/animation.html">作为白嫖怪必须知道的一个看番汇总帖</a><br>
-  <a href="https://chat.openai.com/">ChatGPT所在地</a><br>
-  <a href="https://www.copymanga.site/">非常著名的拷贝</a><br>
-  <a href="https://snapdrop.net/">跨站点隔空投送</a><br>
-  <a href="https://nexitally.com/Main.aspx">咱们机场</a><br>
+    <!--所谓主标题h1-->
+    <h3>My simple try to set up a little website. </h3>
+    <p>先提出一些正经的知识网站相关</p>
+    <p><a href="https://github.com/">Github官方网址捏</a><br><a href="https://chat.openai.com/">ChatGPT所在地</a><br><a href="https://snapdrop.net/">跨设备隔空投送的好帮手</a></p>
+    <hr>
+    <p>下面是奖励网站</p>
+    <p><a href="https://www.copymanga.site/">非常著名的拷贝</a><br><a href="https://ayouth.top/ayouth/animation.html">作为白嫖怪必须知道的一个看番汇总帖</a></p>
+    <hr>
+    <p>以及总会被忘记的重要梯子</p>
+    <p><a href="https://nexitally.com/Main.aspx">所谓我的机场首页</a></p>
 </body>
 </html>
